# internal/features/analytics/routes.go
@@ -5,8 +5,12 @@ import "github.com/gofiber/fiber/v2"
 func RegisterRoutes(app *fiber.App, handler *analyticsHandler) {
 	api := app.Group("/api/v1")
 	analytics := api.Group("/analytics")
+	clicks := app.Group("/clicks")
 
-	analytics.Get("/", handler.GetAll)
-	analytics.Get("/:shortUrl", handler.GetAllByShortUrl)
-	analytics.Post("/", handler.Create)
+	clicks.Post("/clicks", handler.CreateClick)
+	clicks.Get("/", handler.GetAllClicks)
+	clicks.Get("/:id", handler.GetClickById)
+
+	analytics.Get("/", handler.GetAllAnalytics)
+	analytics.Get("/:shortUrl", handler.GetAllAnalyticsByShortUrl)
 }
