# internal/features/user/routes.go
@@ -7,11 +7,11 @@ import (
 func RegisterRoutes(app *fiber.App, handler *UserHandler) {
 
 	api := app.Group("/api/v1")
-	users := api.Group("/users")
+	api.Post("/register", handler.CreateUser)
+	api.Post("/login", handler.Login)
 
+	users := api.Group("/users")
 	users.Get("/", handler.GetAllUsers)
-	users.Post("/", handler.CreateUser)
-	users.Post("/login", handler.Login)
 	users.Get("/:id", handler.GetUser)
 	users.Put("/:id", handler.UpdateUser)
 	users.Delete("/:id", handler.DeleteUser)
